.metadata/.plugins/org.eclipse.cdt.ui/ClaseTablero.build.log
12:35:00 **** Incremental Build of configuration Debug for project ClaseTablero ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\tablero.o" "..\\src\\tablero.cpp" 
In file included from ..\src\tablero.cpp:8:
..\src\tablero.h:20:15: error: field 'std::vector<int> tablero::tablero' with same name as class [-fpermissive]
  vector <int> tablero;
               ^~~~~~~

12:35:00 Build Failed. 1 errors, 0 warnings. (took 331ms)

